--- a/styles/main.css
+++ b/styles/main.css
@@ -1,65 +1,4 @@
-* {
-  box-sizing: border-box;
-  text-decoration: none;
-}
-
-header,
-main,
-footer {
-  font-family: "Roboto", sans-serif;
-}
-
-h1 {
-  font-size: x-large;
-  font-weight: 800;
-}
-
-.loader {
-  position: fixed;
-  z-index: 1;
-  background-color: #fff;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  -webkit-animation: apparition 2s forwards;
-          animation: apparition 2s forwards;
-}
-.loader--element {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  color: #9356dc;
-  font-size: 11px;
-  background: #9356dc;
-  -webkit-animation: escaleY 1s infinite ease-in-out;
-          animation: escaleY 1s infinite ease-in-out;
-  width: 1em;
-  height: 4em;
-  -webkit-animation-delay: -0.16s;
-          animation-delay: -0.16s;
-}
-
-.loader--element:before,
-.loader--element:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 2em;
-  color: #99e2d0;
-  background: #99e2d0;
-  width: 1em;
-  height: 4em;
-  -webkit-animation: escaleY 1s infinite ease-in-out;
-          animation: escaleY 1s infinite ease-in-out;
-}
-
-.loader--element:before {
-  left: -2em;
-  -webkit-animation-delay: -0.32s;
-          animation-delay: -0.32s;
-}
-
+/* Animation loader sur la main page*/
 @-webkit-keyframes escaleY {
   0%, 80%, 100% {
     box-shadow: 0 0;
@@ -70,7 +9,6 @@ h1 {
     height: 4em;
   }
 }
-
 @keyframes escaleY {
   0%, 80%, 100% {
     box-shadow: 0 0;
@@ -101,6 +39,93 @@ h1 {
     visibility: hidden;
   }
 }
+/* Animation validation page menu*/
+@-webkit-keyframes validation {
+  0% {
+    opacity: 0;
+    transform: translateY(1rem);
+  }
+  70%, 100% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes validation {
+  0% {
+    opacity: 0;
+    transform: translateY(1rem);
+  }
+  70%, 100% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+* {
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+header,
+main,
+footer {
+  font-family: "Roboto", sans-serif;
+}
+
+h1 {
+  font-size: x-large;
+  font-weight: 800;
+}
+
+.loader {
+  position: fixed;
+  z-index: 1;
+  background-color: #fff;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  -webkit-animation: apparition 2.2s forwards;
+  animation: apparition 2.2s forwards;
+}
+.loader__element {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  color: #9356dc;
+  font-size: 11px;
+  background: #9356dc;
+  -webkit-animation: escaleY 1s infinite ease-in-out;
+  animation: escaleY 1s infinite ease-in-out;
+  width: 1em;
+  height: 4em;
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+.loader__element:before,
+.loader__element:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 2em;
+  color: #99e2d0;
+  background: #99e2d0;
+  width: 1em;
+  height: 4em;
+  -webkit-animation: escaleY 1s infinite ease-in-out;
+  animation: escaleY 1s infinite ease-in-out;
+}
+
+.loader__element:before {
+  left: -2em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
 header {
   width: 100%;
   text-align: center;
@@ -236,7 +261,7 @@ header img {
 .restaurants__card--img {
   max-height: 200px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-radius: 15px 15px 0 0;
 }
 .restaurants__card--img--nouveau {
@@ -272,12 +297,12 @@ header img {
   margin-right: 12px;
   font-size: x-large;
   -webkit-background-clip: text;
-          background-clip: text;
+  background-clip: text;
   content: "\f004";
   font-family: "Font Awesome 6 Free";
   font-style: normal;
   font-weight: 500;
-  transition: color 200ms;
+  transition: color 500ms;
 }
 .restaurants__card--legende--heart:hover::before {
   font-weight: 600;
