--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,5 @@
-$primary-color: #9356dc;
-$secondary-color: #ff79da;
-$tertiary-color: #99e2d0;
-$background-color: #f6f6f6;
-$heart-color: linear-gradient(to top, $secondary-color, $primary-color);
-$dark-background-color: darken($background-color, 5%);
+@import "./utils/variables";
+@import "./layouts/animations";
 
 * {
     box-sizing: border-box;
@@ -29,22 +25,25 @@ h1 {
     right: 0;
     bottom: 0;
     left: 0;
-    animation: apparition 2s forwards;
-    &--element {
+    -webkit-animation: apparition 2.2s forwards;
+    animation: apparition 2.2s forwards;
+    &__element {
         position: absolute;
         left: 50%;
         top: 50%;
         color: #9356dc;
         font-size: 11px;
         background: #9356dc;
+        -webkit-animation: escaleY 1s infinite ease-in-out;
         animation: escaleY 1s infinite ease-in-out;
         width: 1em;
         height: 4em;
+        -webkit-animation-delay: -0.16s;
         animation-delay: -0.16s;
     }
 }
-.loader--element:before,
-.loader--element:after {
+.loader__element:before,
+.loader__element:after {
     content: "";
     position: absolute;
     top: 0;
@@ -53,36 +52,13 @@ h1 {
     background: #99e2d0;
     width: 1em;
     height: 4em;
+    -webkit-animation: escaleY 1s infinite ease-in-out;
     animation: escaleY 1s infinite ease-in-out;
 }
-.loader--element:before {
+.loader__element:before {
     left: -2em;
+    -webkit-animation-delay: -0.32s;
     animation-delay: -0.32s;
-}
-
-@keyframes escaleY {
-    0%,
-    80%,
-    100% {
-        box-shadow: 0 0;
-        height: 3em;
-    }
-    40% {
-        box-shadow: 0 -2em;
-        height: 4em;
-    }
-}
-
-@keyframes apparition {
-    0%,
-    70% {
-        opacity: 1;
-        visibility: visible;
-    }
-    100% {
-        opacity: 0;
-        visibility: hidden;
-    }
 }
 
 header {
@@ -222,6 +198,7 @@ header {
     }
     &__card--img {
         max-height: 200px;
+        -o-object-fit: cover;
         object-fit: cover;
         border-radius: 15px 15px 0 0;
     }
@@ -257,12 +234,13 @@ header {
         background: $heart-color;
         margin-right: 12px;
         font-size: x-large;
+        -webkit-background-clip: text;
         background-clip: text;
         content: "\f004";
         font-family: "Font Awesome 6 Free";
         font-style: normal;
         font-weight: 500;
-        transition: color 200ms;
+        transition: color 500ms;
     }
     &__card--legende--heart:hover::before {
         font-weight: 600;
