--- a/styles/main.css
+++ b/styles/main.css
@@ -208,6 +208,9 @@ header img {
   color: #9356dc;
 }
 .fonctionnement__btn--ordre {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   margin-left: -40px;
   width: 23px;
