--- a/styles/layouts/_animations.scss
+++ b/styles/layouts/_animations.scss
@@ -50,9 +50,9 @@
     }
 }
 
-/* Animation validation page menu*/
+/* Animation progressive page menu*/
 
-@-webkit-keyframes validation {
+@-webkit-keyframes progressif {
     0% {
         opacity: 0;
         transform: translateY(1rem);
@@ -66,7 +66,7 @@
     }
 }
 
-@keyframes validation {
+@keyframes progressif {
     0% {
         opacity: 0;
         transform: translateY(1rem);
